Netflix EDA Project Completed

--- a/NetflixDataAnalysis.ipynb
+++ b/NetflixDataAnalysis.ipynb
@@ -5,7 +5,7 @@
    "id": "9ef19f09-883e-42d6-b72f-32416255d9b2",
    "metadata": {},
    "source": [
-    "**Netfliix**: Netflix is an American subscription video on-demand over-the-top streaming service. The service primarily distributes original and acquired films and television shows from various genres, and it is available internationally in multiple languages [For More Information Click Here](https://en.wikipedia.org/wiki/Netflix)"
+    "**Netflix**: Netflix is an American subscription video on-demand over-the-top streaming service. The service primarily distributes original and acquired films and television shows from various genres, and it is available internationally in multiple languages [For More Information Click Here](https://en.wikipedia.org/wiki/Netflix)"
    ]
   },
   {
