--- a/NetflixDataAnalysis.ipynb
+++ b/NetflixDataAnalysis.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "#### **Netflix Movies & TV Shows**\n",
     "\n",
-    "![NetflixDataAnalysis](image\photo.png)"
+    "![NetflixDataAnalysis](image\\netflix_2504929.png)"
    ]
   },
   {
